Fne bug fixes updated mahendra sprint7 (#185)
* print preview related UI changes

print preview related UI changes

* print preview related UI changes

print preview related UI changes

* FNE 565 changes

FNE 565 changes

* FNE 565 changes

FNE 565 changes

* FNE 565 related changes

FNE 565 related changes

* print preview related changes

print preview related changes

* print preview test 

print preview test

* print preview changes

print preview changes

* print preview changes

print preview changes

* sprint7 bug fixing

sprint7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* sprint 7 bug fixing

sprint 7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* print preview and FNE 192 ans FNE 262 bug fixes

print preview and FNE 192 ans FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

print preview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 b

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -8,7 +8,12 @@
           [cashOnHand]="cashOnHand"
           [specialreports]=specialreports
           [regularreports]=regularreports
-          [selectedreporttype]=reporttype
+          [selectedreporttype]=selectedReportType
+          [selectedstate]=selectedstate
+          [electiondates]=electionDates
+          [fromDate]=fromDate
+          [toDate]=toDate
+         
         >
       </report-type-sidebar>
     </div>
@@ -51,10 +56,12 @@
         class="form__step"
         [hidden]="step!=='step_1'"
       >
-        <f3x-report-type>
+        <f3x-report-type 
           [formRadioOptionsVisible]="formRadioOptionsVisible"
           [reportTypeRadio]="reportTypeRadio"
           (status)='onNotify($event)'
+          [reportType]=reportType>
+         
         </f3x-report-type>
       </div>
 
