--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -13,8 +13,8 @@
            <button
              type="button"
              class="btn btn-validate"
-             (click)="printPriview()"
-             [disabled]="true"
+             (click)="printPreview()"
+            
            >
              Print Preview
            </button> &nbsp;
@@ -229,9 +229,8 @@
        </div>
        <div class="grid-row">
           <div class="grid-row__col grid-row__col--12">
-            <h4>* = Required</h4>
+          <h4>* = Required</h4>
           </div>
-      </div>
-    </footer>
+      </div>        </footer>
    </form>
  </div> <!-- ./signee-container -->
