--- a/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.scss
+++ b/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.scss
@@ -11,4 +11,96 @@
       }
     }
   }
+  section {
+    .form-sidebar__links {
+      list-style-type: none;
+      min-height: 445px;
+      margin-top: 15px;
+      .form-sidebar-item {
+        border-bottom: 1px solid $white;
+        display: block;
+        padding-bottom: 15px;
+        padding-top: 15px;
+        vertical-align: middle;
+        &:first-child {
+          border-top: 1px solid $white;
+        }
+        &.selected {
+          background-color: $shuttleGray;
+          padding-bottom: 0;
+        }
+        .form-sidebar-item-box {
+          .btn-link {
+            color: $black;
+            float: left;
+            line-height: 0;
+            margin-left: 5px;
+            padding-left: 0;
+            padding-right: 0;
+            padding-top: 10px;
+            &:active,
+            &:focus,
+            &:hover,
+            &:visited {
+              color: $black;
+              text-decoration: none;
+            }
+            &.selected {
+              color: $white;
+              padding-bottom: 10px;
+              &:active,
+              &:focus,
+              &:hover,
+              &:visited {
+                color: $white;
+                text-decoration: none;
+              }
+            }
+          }
+          .amount {
+            color: $black;
+            float: right;
+            padding-right: 10px;
+          }
+          &.selected {
+            .amount {
+              color: $white;
+            }
+          }
+          @include clearfix();
+        }
+      
+        @include clearfix();
+      } // .form-sidebar-item
+    } // .form-sidebar__links
+  }
+  footer {
+    background-color: $mineShaft;
+    .form-sidebar__item {
+      border-bottom: 1px solid $white;
+      color: $white;
+      height: 25px;
+      line-height: 25px;
+      padding-bottom: 10px;
+      vertical-align: middle;
+      .form-sidebar-item__text {
+        color: $white;
+        float: left;
+        padding-left: 5px;
+      }
+      .form-sidebar-item__value {
+        color: $white;
+        float: right;
+        padding-right: 8px;
+      }
+    }
+    .form-sidebar__btns {
+      padding-bottom: 10px;
+      padding-top: 15px;
+      text-align: center;
+      .btn-row {
+        padding-top: 15px;
+      }
+    }
+}
 }
