--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -1,35 +1,66 @@
+@import '../../../shared/scss/global';
+
 .individual-receipt-container {
   padding-right: 10px;
-  .row {
-    margin-bottom: 20px;
-    margin-left: 0;
-    margin-right: 0;
-    .col {
-      label {
-        display: block;
-      }
-      input[type='text'] {
-        &.form-control {
-          height: 30px;
-          padding-left: 5px;
-          padding-right: 5px;
+  form {
+    section {
+      .row {
+        margin-bottom: 20px;
+        margin-left: 0;
+        margin-right: 0;
+        .col {
+          label {
+            display: block;
+          }
+          input[type='text'] {
+            &.form-control {
+              height: 30px;
+              padding-left: 5px;
+              padding-right: 5px;
+            }
+          }
+          textarea {
+            &.form-control {
+              overflow: scroll;
+              width: 400px;
+            }
+          }
+          .ng-select.transaction-type-select {
+            width: 350px;
+          }
+          .ng-select.state-select {
+            .ng-select-container {
+              height: 45px;
+              width: 300px;
+            }
+          }
         }
       }
-      textarea {
-        &.form-group {
-          overflow: scroll;
-          width: 400px;
+    }
+  }
+  footer {
+    .forms__btn-container {
+      margin: 0 auto;
+      padding: 0;
+      width: 80%;
+      @include media(tablet) {
+        margin: 0;
+        padding: 0;
+        width: 95%;
+      }
+      @include media(mediumDesktop) {
+        width: 95%;
+        .btn-right {
+          margin-right: 20px;
         }
       }
-      .ng-select.transaction-type-select {
-        width: 350px;
-      }
-      .ng-select.state-select {
-        .ng-select-container {
-          height: 45px;
-          width: 300px;
+      @include media(largeDesktop) {
+        width: 95%;
+        .btn-right {
+          margin-right: 20px;
         }
       }
+      @include clearfix();
     }
   }
 }
