--- a/front-end/src/app/forms/form-3x/transaction-categories-sidebar/transaction-categories-sidebar.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-categories-sidebar/transaction-categories-sidebar.component.scss
@@ -3,7 +3,7 @@
 .form-sidebar {
   margin-left: auto;
   margin-right: auto;
-  min-height: 100vh;
+  min-height: 1075px;
   position: relative;
   .search-field {
     margin-left: auto;
