Getting tooltips to show on form

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -12,7 +12,9 @@
           label {
             display: block;
           }
-          input[type='text'] {
+          input[type='text'],
+          input[type='date'],
+          input[type='number'] {
             &.form-control {
               height: 30px;
               padding-left: 5px;
