--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -8,12 +8,8 @@
              <button
                 type="button"
                 class="btn btn-info"
-                [ngbTooltip]="tipContent1"
-                #t1="ngbTooltip"
-                (click)="toggleToolTip(t1)"
-                triggers="manual"
-                tooltipClass="sidebar-tooltip"
-                placement="right"
+                ngbTooltip="Waiting for text."
+                tooltipClass="form-tooltip"
               >
                 <i class="info-icon" aria-hidden="true"></i>
                 <span class="sr-only">Click here for more information</span>
@@ -39,7 +35,7 @@
           >
             <div
               class="text-error text-left"
-              *ngIf="frmIndividualReceipt.controls.transactionCategory?.errors?.required"
+              *ngIf="frmIndividualReceipt.controls.transactionCategory.errors?.required"
             >
               You must select a transaction category.
             </div>
@@ -53,12 +49,8 @@
              <button
                 type="button"
                 class="btn btn-info"
-                [ngbTooltip]="tipContent1"
-                #t1="ngbTooltip"
-                (click)="toggleToolTip(t1)"
-                triggers="manual"
-                tooltipClass="sidebar-tooltip"
-                placement="right"
+                ngbTooltip="Waiting for text."
+                tooltipClass="form-tooltip"
               >
                 <i class="info-icon" aria-hidden="true"></i>
                 <span class="sr-only">Click here for more information</span>
@@ -80,7 +72,7 @@
           >
             <div
               class="text-error text-left"
-              *ngIf="frmIndividualReceipt.controls.transactionType?.errors?.required"
+              *ngIf="frmIndividualReceipt.controls.transactionType.errors?.required"
             >
               You must select a transaction type.
             </div>
@@ -113,9 +105,21 @@
                   <ng-container *ngIf="col.required">
                     *
                   </ng-container>
+                 <button
+                    type="button"
+                    class="btn btn-info"
+                    ngbTooltip="{{ col.infoText }}"
+                    tooltipClass="form-tooltip"
+                    *ngIf="col.infoIcon"
+                  >
+                    <i class="info-icon" aria-hidden="true"></i>
+                    <span class="sr-only">Click here for more information</span>
+                  </button>
                 </label>
-                <ng-container *ngIf="col.type === 'text'">
-                  <input type="text" name="{{ col.name }}" class="form-control" />
+                <ng-container
+                  *ngIf="col.type === 'text' || col.type === 'date' || col.type === 'number'"
+                >
+                  <input type="{{ col.type }}" name="{{ col.name }}" class="form-control" />
                 </ng-container>
                 <ng-container *ngIf="col.type === 'textarea'">
                   <textarea class="form-control" rows="5"></textarea>
