--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -31,12 +31,22 @@
           .ng-select.transaction-category-select  {
             width: 350px;
           }
+          .ng-select.transaction-type-select {
+            .ng-dropdown-panel-items {
+              .ng-option-disabled {
+                &.ng-optgroup {
+                  font-weight: bold;
+                }
+              }
+            }
+          }
           .ng-select.state-select {
             .ng-select-container {
               height: 45px;
               width: 300px;
             }
           }
+
         }
       }
     }
