--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -34,7 +34,7 @@
           </ng-select>
           <div
             class="error-text"
-            *ngIf="(frmIndividualReceipt.invalid && (frmIndividualReceipt.dirty || frmIndividualReceipt.touched))"
+            *ngIf="(frmIndividualReceipt.controls.transactionCategory.invalid && (frmIndividualReceipt.controls.transactionCategory.dirty || frmIndividualReceipt.controls.transactionCategory.touched)) || formSubmitted"
           >
             <div
               class="text-error text-left"
@@ -71,7 +71,7 @@
           </ng-select>
           <div
             class="error-text"
-            *ngIf="(frmIndividualReceipt.invalid && (frmIndividualReceipt.dirty || frmIndividualReceipt.touched))"
+            *ngIf="(frmIndividualReceipt.controls.transactionType.invalid && (frmIndividualReceipt.controls.transactionType.dirty || frmIndividualReceipt.controls.transactionType.touched)) || formSubmitted"
           >
             <div
               class="text-error text-left"
@@ -120,11 +120,11 @@
                   />
                   <div
                     class="error-text"
-                    *ngIf="frmIndividualReceipt.get(col.name).invalid && frmIndividualReceipt.get(col.name).dirty || frmIndividualReceipt.get(col.name).touched"
+                    *ngIf="frmIndividualReceipt.get(col.name).invalid && frmIndividualReceipt.get(col.name).dirty || frmIndividualReceipt.get(col.name).touched || frmIndividualReceipt.get(col.name).blur || formSubmitted"
                   >
                     <div
                       class="text-error text-left"
-                      *ngIf="frmIndividualReceipt.get(col.name).errors.required"
+                      *ngIf="frmIndividualReceipt.get(col.name).errors?.required"
                     >
                       {{ col.text }} is required.
                     </div>
