--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -3,6 +3,24 @@
 .individual-receipt-container {
   padding-right: 10px;
   form {
+  header {
+      .header-content {
+        display: block;
+        margin: 0 auto;
+        width: 96%;
+        @include clearfix();
+        .btn-options {
+          color: $shuttleGray;
+          text-decoration: none;
+          &:hover,
+          &:visited,
+          &:active {
+            color: $shuttleGray;
+            text-decoration: none;
+          }
+        }
+      }
+    }
     section {
       .row {
         margin-bottom: 20px;
@@ -30,11 +48,20 @@
           .ng-select.transaction-type-select,
           .ng-select.transaction-category-select  {
             width: 360px;
+            .ng-select-container {
+              .ng-value-container {
+                .ng-placeholder {
+                  color: $black;
+                  font-weight: bold;
+                }
+              }
+            }
           }
           .ng-select.transaction-type-select {
             .ng-dropdown-panel-items {
               .ng-option-disabled {
                 &.ng-optgroup {
+                  color: $black;
                   font-weight: bold;
                 }
               }
