Removing search box from sidebar

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -85,7 +85,7 @@
           <ng-select
             name="transactionType"
             class="transaction-type-select"
-            [placeholder]="frmIndividualReceipt.controls.transactionCategory.invalid ? 'You must select a transaction category first.' : ''"
+            [placeholder]="frmIndividualReceipt.controls.transactionCategory.invalid ? 'You must select a transaction category first.' : 'Select a transaction type.'"
             [items]="transactionTypes"
             bindLabel="text"
             bindValue="value"
