--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -27,6 +27,9 @@
         margin-left: 0;
         margin-right: 0;
         .col {
+          &.info-text {
+            padding-top: 45px;
+          }
           label {
             display: block;
           }
