--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -18,7 +18,7 @@
               type="button"
               class="btn btn-validate"
               (click)="printPreview()"
-              [disabled]="false"
+              [disabled]="frmReason.controls.reasonText.errors?.requiredLength || (! validFile)"
             >
               Print Preview
             </button> &nbsp;
@@ -50,7 +50,7 @@
             </div>
           </div>
           <div class="grid-row info-row">
-            <div class="grid-row__col grid-row__col--12 text-left">
+            <div class="grid-row__col grid-row__col--6 text-left">
               <b>Enter your text*</b>
               <ng-template #tipContent1>
                   Please note that if you copy and paste text into the text box the formatting may be lost.
@@ -70,6 +70,9 @@
                   <i class="info-icon" aria-hidden="true"></i>
                   <span class="sr-only">Click here for more information</span>
                 </button>
+            </div>
+            <div  class="grid-row__col grid-row__col--6 text-right">
+              *=Required
             </div>
           </div>
           <div class="grid-row">
@@ -194,11 +197,6 @@
                Save & Continue
               </button>
             </div>
-          </div>
-        </div>
-        <div class="grid-row">
-          <div class="grid-row__col grid-row__col--12">
-            *=Required
           </div>
         </div>
       </footer>
